feat: set up an endpoint to get all requests made by the logged-in user
